[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/scenes/Office.gd" type="Script" id=1]
[ext_resource path="res://office/trainee_action.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/SaveGameR.gd" type="Script" id=3]
[ext_resource path="res://office/Billboard.gd" type="Script" id=4]

[sub_resource type="Resource" id=1]
script = ExtResource( 3 )
coins = 200
ale = 99
slimes = 0
potions = 0
hp = 0
patrons = 3
turns = 0
brewers = 1
slime_density = 1.0
active_posts = [ 1 ]

[node name="Office" type="Node2D"]
script = ExtResource( 1 )
save_game_override = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 722.0

[node name="HBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 465.0
margin_bottom = 707.0
custom_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/HBox"]
margin_right = 450.0
margin_bottom = 32.0
text = "Office"
align = 1

[node name="GossipLabel" type="Label" parent="MarginContainer/HBox"]
margin_top = 40.0
margin_right = 450.0
margin_bottom = 72.0
text = "Gossip Around The Bar:"

[node name="BarGossip" type="VBoxContainer" parent="MarginContainer/HBox"]
margin_top = 80.0
margin_right = 450.0
margin_bottom = 80.0

[node name="BuffsList" type="VBoxContainer" parent="MarginContainer/HBox"]
margin_top = 88.0
margin_right = 450.0
margin_bottom = 120.0

[node name="NoAleLabel" type="Label" parent="MarginContainer/HBox/BuffsList"]
margin_right = 450.0
margin_bottom = 32.0
text = "No ale (fewer patrons)"

[node name="BrewerAction" parent="MarginContainer/HBox" instance=ExtResource( 2 )]
margin_top = 128.0
margin_right = 450.0
margin_bottom = 331.0

[node name="HBox" type="HBoxContainer" parent="MarginContainer/HBox"]
margin_top = 339.0
margin_right = 450.0
margin_bottom = 371.0

[node name="RoadLabel" type="Label" parent="MarginContainer/HBox/HBox"]
margin_right = 144.0
margin_bottom = 32.0
text = "Road Quality "

[node name="RoadScore" type="Label" parent="MarginContainer/HBox/HBox"]
margin_left = 148.0
margin_right = 450.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "0/50"
align = 2

[node name="BuffsLabel" type="Label" parent="MarginContainer/HBox"]
margin_top = 379.0
margin_right = 450.0
margin_bottom = 411.0

[node name="TitleB" type="Label" parent="MarginContainer/HBox"]
margin_top = 419.0
margin_right = 450.0
margin_bottom = 451.0
text = "Billboard Posts"
align = 1

[node name="Posted" type="VBoxContainer" parent="MarginContainer/HBox"]
margin_top = 459.0
margin_right = 450.0
margin_bottom = 459.0
script = ExtResource( 4 )

[node name="TitleP" type="Label" parent="MarginContainer/HBox"]
margin_top = 467.0
margin_right = 450.0
margin_bottom = 499.0
text = "Add Posting"
align = 1

[node name="Unposted" type="VBoxContainer" parent="MarginContainer/HBox"]
margin_top = 507.0
margin_right = 450.0
margin_bottom = 507.0
script = ExtResource( 4 )

[node name="BackToInn" type="Button" parent="."]
margin_left = 364.0
margin_top = 668.0
margin_right = 465.0
margin_bottom = 707.0
text = "Back to Inn"

[connection signal="pressed" from="BackToInn" to="." method="_on_BackToInn_pressed"]
